--- a/package.json
+++ b/package.json
@@ -6,13 +6,17 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@prisma/client": "^5.18.0",
     "next": "14.2.5",
     "next-auth": "^4.24.7",
+    "prisma": "^5.18.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0"
   },
   "devDependencies": {
