--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,6 @@ CLIENT_ID = '' #Get it from Google developers console
 NEXTAUTH_SECRET = '' 
 NEXTAUTH_URL = ''
 DATABASE_URL = ''
+NEXT_PUBLIC_EMAIL_SERVICE_KEY=""
+NEXT_PUBLIC_EMAIL_TEMPLATE_KEY=""
+NEXT_PUBLIC_EMAIL_PUBLIC_KEY=""
