--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,6 @@
-CLIENT_SECRET = '' #Get it from Google developers console
-CLIENT_ID = '' #Get it from Google developers console
+CLIENT_SECRET = ''
+CLIENT_ID = ''
 NEXTAUTH_SECRET = '' 
 NEXTAUTH_URL = ''
 DATABASE_URL = ''
-NEXT_PUBLIC_EMAIL_SERVICE_KEY=""
-NEXT_PUBLIC_EMAIL_TEMPLATE_KEY=""
-NEXT_PUBLIC_EMAIL_PUBLIC_KEY=""
+NEXT_PUBLIC_RESEND_API_KEY=""
