--- a/.env.example
+++ b/.env.example
@@ -3,4 +3,5 @@ CLIENT_ID = ''
 NEXTAUTH_SECRET = '' 
 NEXTAUTH_URL = ''
 DATABASE_URL = ''
-NEXT_PUBLIC_RESEND_API_KEY=""
+NEXT_PUBLIC_RESEND_API_KEY = ''
+AI_MODAL_API_URL = ''
